# fallout

./: .gitignore  LICENSE  README.md  fallout.py  pyproject.toml
src/fallout/: __init__.py  __main__.py  fallout.py
src/fallout.egg-info/: PKG-INFO  SOURCES.txt
